visibility icon is in the correct size

--- a/modules/map/components/statusbar/_statusbar.scss
+++ b/modules/map/components/statusbar/_statusbar.scss
@@ -54,6 +54,10 @@
       padding-bottom: .25rem;
     }
 
+    .legend-visibility-icon {
+      width: 1.5em;
+    }
+
     .legenda-item-toggle {
       margin-right: .5rem;
       padding-top: .25rem;
